kk: Fix z-index issues

--- a/src/style/_app-style.scss
+++ b/src/style/_app-style.scss
@@ -79,3 +79,7 @@ h6 {
     background-color: $sbb-red-125;
   }
 }
+
+.ui-growl{
+  z-index: 1050 !important;
+}
