--- a/src/style/_app-temp.scss
+++ b/src/style/_app-temp.scss
@@ -504,6 +504,7 @@
   position: fixed;
   right: 0;
   left: 0;
+  z-index: 1030;
 }
 
 @media (min-width: 768px) {
